--- a/UserCollection.WebAPP/Views/Item/CollectionItems.cshtml
+++ b/UserCollection.WebAPP/Views/Item/CollectionItems.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<UserCollection.WebAPI.Models.CollectionCategoryModel>
+﻿@model IEnumerable<UserCollection.WebAPI.Models.ItemModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "CollectionItems";
 }
 
-<h1>Index</h1>
+<h1>CollectionItems</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -18,6 +18,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CreatedDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CollectionId)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -29,6 +35,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CreatedDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CollectionId)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
