--- a/UserCollection.WebAPP/Views/Collection/UserCollection.cshtml
+++ b/UserCollection.WebAPP/Views/Collection/UserCollection.cshtml
@@ -61,6 +61,7 @@
     </dl>
 </div>
 <div>
+    @Html.ActionLink("Items", "CollectionItems", "Item", new { id = Model.Id })
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
     <a asp-action="Index">Back to List</a>
 </div>
