--- a/UserCollection.WebAPP/Views/Collection/Index.cshtml
+++ b/UserCollection.WebAPP/Views/Collection/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>All Collections</h1>
+<h1><a href="@Url.Action("AllCollections")" class="card-link text-dark text-decoration-none">All Collections</a></h1>
 <div class="row">
     @foreach (var item in Model.OrderByDescending(c => c.Items.Count()).Take(5))
     {
