Fix mapping problem with DateTime Change Create page and fix problem with adding new Item to database

--- a/UserCollection.WebAPP/Views/Item/CollectionItems.cshtml
+++ b/UserCollection.WebAPP/Views/Item/CollectionItems.cshtml
@@ -7,7 +7,7 @@
 <h1>CollectionItems</h1>
 
 <p>
-    <a asp-action="CreateItem">Create New</a>
+    <a asp-action="CreateItem" asp-route-id="@ViewBag.CollectionId">Create New</a>
 </p>
 <table class="table">
     <thead>
