--- a/UserCollection.WebAPP/Views/Item/CollectionItems.cshtml
+++ b/UserCollection.WebAPP/Views/Item/CollectionItems.cshtml
@@ -43,7 +43,7 @@
                 @Html.DisplayFor(modelItem => item.CollectionId)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Edit", "ItemEdit", new {  id=item.Id }) |
                 @Html.ActionLink("Details", "ItemDetails", new {  id=item.Id }) |
                 @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
             </td>
