Add CAtegory name in Create page

--- a/UserCollection.WebAPP/Views/Collection/Create.cshtml
+++ b/UserCollection.WebAPP/Views/Collection/Create.cshtml
@@ -29,7 +29,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
-                <input asp-for="CategoryId" class="form-control" />
+                <select asp-for="CategoryId" asp-items="@ViewBag.SelectListItems" class="form-control">
+                    <option value="">-- Select Category --</option>
+                </select>
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
             <div id="customStringFields">
