--- a/UserCollection.WebAPP/Views/Collection/UserCollections.cshtml
+++ b/UserCollection.WebAPP/Views/Collection/UserCollections.cshtml
@@ -67,7 +67,7 @@
                 @Html.DisplayFor(modelItem => item.CategoryId)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Edit", "Edit", new {  id=item.Id }) |
                 @Html.ActionLink("Details", "UserCollection", new { id = item.Id }) |
                 @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
             </td>
