--- a/UserCollection.WebAPP/Views/Shared/_Layout.cshtml
+++ b/UserCollection.WebAPP/Views/Shared/_Layout.cshtml
@@ -26,7 +26,14 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item flex-fill">
-                            <input type="text" class="form-control" placeholder="find.." />
+                            <form asp-controller="Item" asp-action="SearchResult" method="GET">
+                        <li class="nav-item flex-fill">
+                            <input type="text" name="query" class="form-control" placeholder="find.." />
+                        </li>
+                        <li class="nav-item flex-fill">
+                            <button type="submit" class="btn btn-primary">Search</button>
+                        </li>
+                        </form>
                         </li>
                     </ul>
                     
